--- a/app/globals.css
+++ b/app/globals.css
@@ -42,8 +42,7 @@ a {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: var(--font-roboto), sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
